examples/test/testpolicy16390.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16390
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key25: value29
      key31: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value41
          key49: value14
      podSelector:
        matchLabels:
          key0: value11
          key2: value43
